<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DHIS2 eHealth Data Capture</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="desc">stub image</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_data_entry">DataEntryActivity</string>
    <string name="title_activity_downloader">DownloaderActivity</string>

    <!-- login -->
    <string name="login_dialog_message">Please wait</string>
    <string name="downloading_forms">Downloading forms</string>
    <string name="downloading_values">Downloading values</string>

    <!-- data entry -->
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="none_button">No value</string>

    <string name="enter_number">Enter number</string>
    <string name="enter_integer">Enter integer</string>
    <string name="enter_integer_positive">Enter positive integer</string>
    <string name="enter_integer_positive_or_zero">Enter zero or positive integer</string>
    <string name="enter_integer_negative">Enter negative integer</string>
    <string name="enter_text">Enter text</string>
    <string name="enter_long_text">Enter long text</string>
    <string name="enter_date">Enter date (yyyy.mm.dd)</string>
    <string name="find_option">Find option</string>

    <string name="upload">Upload</string>
    <string name="login_button">Log in</string>
    <string name="log_out">Log out</string>
    <string name="save">Save</string>


    <string name="list_view_header_title">Disease/Condition/Event</string>
    <string name="list_view_header_under_5_title">&lt; 5 Years old</string>
    <string name="list_view_header_case_title">Cases</string>
    <string name="list_view_header_death_title">Deaths</string>
    <string name="list_view_header_over_5_title">&gt; 5 Years old</string>
    <string name="toolbar_week_prefix">Week</string>

    <!-- account -->
    <string name="first_name">First name</string>
    <string name="surname">Surname</string>
    <string name="email">E-mail</string>
    <string name="mobile_phone_number">Mobile phone number</string>
    <string name="introduction">Introduction</string>
    <string name="job_title">Job title</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="nationality">Nationality</string>
    <string name="employer">Employer</string>
    <string name="education">Education</string>
    <string name="interests">Interests</string>
    <string name="languages">Languages</string>

    <string name="option_male">Male</string>
    <string name="option_female">Female</string>
    <string name="option_other">Other</string>

    <string name="info_placeholder">No information available</string>

    <!-- toasts and notifications -->
    <string name="check_connection">Please check connection</string>
    <string name="wrong_url">Wrong URL</string>
    <string name="wrong_username_password">Wrong password or username</string>
    <string name="try_again">Please try again</string>
    <string name="bad_response">Bad server response</string>

    <string name="import_successfully_completed">Import successfully completed</string>
    <string name="import_failed">Import failed</string>
    <string name="something_went_wrong">Something went wrong</string>

    <string name="profile_changes_saved">Changes have been successfully saved</string>
    <string name="profile_changes_uploaded">Changes have been successfully uploaded</string>

    <!-- String resources for Login activity -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="server_url">Enter server URL</string>

    <!-- String resources for aggregate report fragment -->
    <string name="choose">Choose</string>
    <string name="choose_data_set">Choose data set</string>
    <string name="choose_program">Choose program</string>
    <string name="choose_unit">Choose organisation unit</string>
    <string name="choose_period">Choose period</string>
    <string name="search">Search</string>

    <!-- String resources for single event without registration fragment -->
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="coordinates">Coordinates</string>
    <string name="complete_date">Complete date</string>
    <string name="choose_report_date">Choose report date</string>

    <!-- String resources for downloader fragment -->
    <string name="download_forms">Download forms</string>

    <!-- menu items -->
    <string name="aggregate_reporting">Aggregate Report</string>
    <string name="profile">Profile</string>

    <!-- Basic strings -->
    <string name="organization_unit">Organisation Unit</string>
    <string name="description">Description</string>
    <string name="dataset">Data set</string>
    <string name="program">Program</string>
    <string name="period">Period</string>
    <string name="swipe_to_update">Swipe to update</string>
    <string name="no_forms_found">No forms found assigned to current user</string>

    <!-- Validation strings -->
    <string name="validation_alert_dialog_title">Validation</string>
    <string name="validation_alert_dialog_confirmation">Confirm</string>
    <string name="validation_alert_dialog_rejection">Delete Value</string>

    <!-- Additional Diseases -->
    <string name="additional_diseases_title">Additional Diseases</string>
    <string name="add_disease_title">Add Disease</string>
    <string name="submit_button_title">Submit</string>
    <string name="delete_disease_dialog_title">Delete disease?</string>
    <string name="delete_disease_dialog_confirmation">OK</string>
    <string name="delete_disease_dialog_rejection">Cancel</string>

    <!-- Compulsory Data -->
    <string name="compulsory_data_dialog_title">Compulsory Data</string>
    <string name="compulsory_data_dialog_message">Submission of the form with blank fields is not possible.</string>
    <string name="compulsory_data_dialog_confirmation">OK</string>

    <!--Submission details -->
    <string name="completion_date_prefix">Last submission on:</string>
    <string name="submission_method_prefix">"Form submission via "</string>
    <string name="completion_date_example">Completed on: 13th October 2016</string>
    <string name="timely_title">Timely</string>

    <!-- SMS permission dialog -->
    <string name="sms_permission_dialog_title">Permission Required</string>
    <string name="sms_permission_dialog_message">The DHIS2 eHealth app requires %s permission in order to function properly</string>
    <string name="sms_permission_dialog_confirmation">OK</string>
</resources>