<?xml version="1.0" encoding="utf-8"?>
<ListView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_of_fields"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:divider="@android:color/transparent"
    android:dividerHeight="0dp"
    android:paddingBottom="40dp"
    android:paddingEnd="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingStart="0dp"
    android:paddingTop="0dp"
    android:scrollbarSize="5dp"
    android:scrollbarStyle="outsideInset"
    android:scrollbarThumbVertical="@drawable/listview_scrollbar_shape" />